Fix spacing of fancy_imagebar in header of kiwitrees theme

--- a/themes/kiwitrees/style.css
+++ b/themes/kiwitrees/style.css
@@ -5417,7 +5417,7 @@ div.widget {
 /* Styling for Fancy Image bar */
 #fancy_imagebar {
 	position: relative;
-	top: 120px;
+	top: 105px;
 }
 /* ------------------ */
 
